tdf#108963 PDF export of editeng text highlight: handle rotated text

The highlight rectangle was not rotated, handle it similar to
PDFWriterImpl::drawStrikeoutChar().

Change-Id: I97a5b1fc05706729c58c92b90d6808629af8ca4c